<resources>
    <string name="app_name">CO2 Samples Places</string>

    <string name="google_maps_api_key"></string>

    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_sample_1">Value sample 1</string>
    <string name="edit_text_hint_sample_2">Value sample 2</string>
    <string name="edit_text_hint_sample_3">Value sample 3</string>
    <string name="edit_text_hint_sample_time_1">Exposure time 1</string>
    <string name="edit_text_hint_sample_time_2">Exposure time 2</string>
    <string name="edit_text_hint_sample_time_3">Exposure time 3</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>

    <string name="note_text_no_chemical_places_found">No CO2 Samples Places are registered yet.</string>
    <string name="image_content_description">image</string>
    <string name="btn_text_view_on_map">VIEW ON MAP</string>
    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>

</resources>